k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: versions
spec:
  selector:
    app: versions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
