k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versions
spec:
  rules:
    - host: versions.nodecluster.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: versions
                port:
                  number: 80
